# pytorch-3d-U-Net

./: apply_noise_batch.py  check_stats.py  compare_logs.py  compare_prediction.py  debug_load.py  detect_resets.py  generate_simple_diffraction.py  inspect_checkpoint.py  inspect_h5.py  inspect_target_sample.py  main_cupy.py  plot_3d_sample.py  predict250Test.py  predictGroup.py  propagation_cupy.py  pyproject.toml  split_dataset_flat.py  trainCustom.py  visualize_h5_3d.py  visualize_prediction_3d.py  visualize_result.py
checkpoint/32x32x128/: used_config.yaml
cs-13/: 1.py  2.py  calculateValValue.py  check_h5.py  evaluateLPIPS.py  fix_checkpoint.py  generate_composite_test.py  generate_hazy_test_sample.py  generate_noisy_data.py  plot_metrics.py  predict250Test.py  predictCustom.py  rename.py  simple_interface.py  strideAnimation.py  test.py  testMath.py  testTrainer.py  testValPredict.py  test_user_noise.py  trainCustom.py  visualize_composite_comparison.py  visualize_hazy_3d.py  visualize_hazy_comparison.py  visualize_noisy_3d.py  visualize_noisy_comparison.py  visualize_pred_results.py  visualize_user_noise.py
cs-13/train-yaml/: patch=128_stride=16_fm=64_valpatch=128.yaml
outputs/exp001_denoising/: used_config.yaml
project/: README-scripts.md  pyproject.toml
project/configs/: train_config.yaml  train_config_tie.yaml
project/scripts/: 1.py  check_val_data.py  compare_models.ps1  eval_metrics.py  generate_diffraction_input.py  generate_simple_propagation.py  generate_tie_input.py  make_noisy.ps1  plot_3d.ps1  (+6 more)
pytorch3dunet/: test_argumentation.py
(+6 files in other folders)
